feat: added implementation lab 2
